Revision history for Test-Class-Moose

0.12
        - add_to_plan() is now deprecated. Use plan() instead. This solves the
          problem where you might also have a before modifier wanting to alter
          the plan.

0.11    May 19, 2013
        - Added the test_classes attribute to the contructor. Allows you to
          easily control which classes you wish to run.

0.10    May 8, 2012
        - Sigh. Skip All tag tests if we can't define tags.

0.09    May 7, 2013
        - Emergency bug fix: don't require Sub::Attribute if they cannot load
          it.

0.08    May 6, 2013
        - Add tag support.
        - Clean up how start and end times for timing is handled.

0.07    April 7, 2013
        - The $test_suite object now has the time() method.
        - Fully document report methods
        - Marked a bunch of "trusted" methods as effectively private.
        - Rename tests_run() to num_tests_run() (internal consistency)
        - Rename test_reporting() to test_report() (test_reporting() is now
          deprecated)
        - Rename ::Reporting classes to ::Report
        - Allow plans in methods. See #84046 in RT queue (Steffen W)
        - Convert to Dist::Zilla
        - Runtests returns $self.

0.06    March 17, 2013
        - Fix the MANIFEST again. That's it. After this I'm switching to
          Dist::Zilla.

0.05    March 17, 2013
        - Even if attributes start with test_, they cannot be test methods.
        - Add AutoUse to the MANIFEST :/

0.04    March 17, 2013
        - Fix test inheritance bug.

0.03    March 16, 2013
        - Add Test::Class::Moose::Role::AutoUse (automatically loads your
          actual classes)

0.02    January 29, 2013
        - Add class/method skipping. 
        - Rename almost every overrideable method to /^test_/.
        - Add a time reporting class. You can now fetch real, user and system
          time for each class or test method.