@@ -7,9 +7,9 @@ use Moose;
 use Moose::Util::TypeConstraints;
 use namespace::autoclean;
 
-subtype 'ArrayRefOfStrings', as 'ArrayRef[Str]';
+subtype 'ArrayRefOfStrings', as 'Maybe[ArrayRef[Str]]';
 
-coerce 'ArrayRefOfStrings', from 'Str', via { [$_] };
+coerce 'ArrayRefOfStrings', from 'Str', via { defined($_) ? [$_] : undef };
 
 has 'show_timing' => (
     is  => 'ro',
